Fix margin issue
The body had an automatic margin of 8px around everything.
The blocks now cover the full length of the screen, as intended.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     font-family: Roboto, sans-serif;
     color: #F9FAF8;
 }
+body {
+    margin: 0;
+}
 h1 {
     margin: 10px 0;
 }
